--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -15,7 +15,7 @@
 
         <div class="row">
             <div class="col-md-8">
-                <h2><span class="label label-@(Model.StatusDescLabel)">#@Model.task_id</span> @Model.title </h2>
+                <h2 class="tasktitle"><span class="label label-@(Model.StatusDescLabel)">#@Model.task_id</span> @Model.title </h2>
                 <h5 class="text-muted">@session.Current.CurrentProject - created by @Model.user1.fullname on @Model.created_on.Value.ToString("dd MMM yyyy HH:mm") </h5>
             
 
