layout fixes, added counts to lists

--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -102,6 +102,39 @@ width:200px;
     float:left;
 }
 
+
+
+    .task-title2 {
+        font-size:30px;
+        word-wrap:break-word;
+        width:100%;
+        
+    }
+    .taskid {
+        float:left;
+            width:100px;
+    }
+
+    .truncate {
+  width: 650px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+ .truncate-tasklist {
+  width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+    .taskname {
+        float:left;
+        word-wrap:break-word;
+    }
+
 .status {
 width:100px;
 }
@@ -144,16 +177,22 @@ width:100px;
     background: #5BC0DE;
 }
 
-.passed,.noissue{
+.passed,.noissue,.closed{
     background: #5CB85C;
 }
-.closed,.onhold {
-    background: #777777;
 
+.onhold {
+   background: #777777;
 }
 
 
 /* miscellanesous*/
+
+
+#area2 {
+    overflow: auto;
+    word-wrap: break-word;
+}
 
 .tasklisttable {
 
