--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -104,7 +104,7 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.PriorityDesc)
                             </td>
-                            <td>
+                            <td class="@(item.IsOverdue?"red":"")">
                                 @Html.DisplayFor(modelItem => item.due_date)
                             </td>
 
@@ -174,7 +174,8 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.PriorityDesc)
                             </td>
-                            <td>
+                            <td class="@(item.IsOverdue?"red":"")">
+
                                 @Html.DisplayFor(modelItem => item.due_date)
                             </td>
 
@@ -315,7 +316,7 @@
                             <td>
                                 @Html.DisplayFor(modelItem => item.PriorityDesc)
                             </td>
-                            <td>
+                            <td class="@(item.IsOverdue?"red":"")">
                                 @Html.DisplayFor(modelItem => item.due_date)
                             </td>
 
